    will also be needed for the eventual official Sky Dimension).  "N"
	now jumps to the next dimension, "P" jumps to the previous.
  * Added support for block IDs > 127 (for mods, primarily)
  * Blocks which orient differently based on direction will default to
    North now, if we see data values we don't understand
  * Block definitions are loaded from a YAML file, instead of hard-coded

Minecraft X-Ray 3.2.2 (2011.09.05)

  * Repackaged due to apparent data corruption in jinput.jar
    Checksums of good jinput.jar:
        md5sum: d62ff8cd9539a32dac094c00e820e9e6
        sha1sum: 2d5a40f2a25f8b4ec1ea35f3e5ca79119ed5d027
    Checksums of bad jinput.jar:
        md5sum: bfdffede315be2fcbad6d9df631d18d8
        sha1sum: 69daa7178d22bc371433678a845231e96d760cd6

Minecraft X-Ray 3.2.1 (2011.08.18)

  * Some mods appear to get rid of misc/water.png, which occasionally
    causes problems.  Updated to generate our own if needed.

Minecraft X-Ray 3.2.0 (2011.07.01)

  * Support for new Beta 1.7 block - Pistons
  * Better rendering for beds, cakes, furnaces, dispensers, pumpkins,
    jack-o-lanterns, chests, workbenches, jukeboxes, TNT, wood,
	bookshelves, grass, and sandstone
  * Tweaked grass/leaf color a bit
  * Toggle between new and old grass rendering with the "G" key
  * "Other" dialog will now let you choose level.dat, in addition to
    just choosing the directory

Minecraft X-Ray 3.1.1 (2011.06.22)

  * Support mod installations (such as TooManyItems on OSX) which replace
    minecraft.jar with a directory

Minecraft X-Ray 3.1.0 (2011.05.26)

  * Update with new Beta 1.6 blocks (trapdoors, tall grass, shrubs)
  * (internal) Changed how we generate the Portal texture

Minecraft X-Ray 3.0.1 (2011.04.24)

  * Fix torch rendering for non-default texture packs, under some
    circumstances.
  * Fix a potential Exception for people running mods like More
    Block IDs

Minecraft X-Ray 3.0.0 (2011.04.21)

  * Render the appropriate sapling sprite 100% of the time