@@ -6,6 +6,7 @@
   * Blocks which orient differently based on direction will default to
     North now, if we see data values we don't understand
   * Block definitions are loaded from a YAML file, instead of hard-coded
+  * Unknown blocks will show up purple in the minimap
 
 Minecraft X-Ray 3.2.2 (2011.09.05)
 
